Telaen:
----------------------------------------------------------------
1.1.2:

[New]	Updated Smarty to 2.6.15

[New]	Added korean language.

[Fix]	Fixed error when using TOP retrieve mode, the msg[size]
	contained an EOF that caused a bad response on the next
	command. Also improved the move function, the message is
	deleted only if the copy is done on filesystem.

[New]	Added APOP login support.

[Fix] 	Better header parsing, support multi-line headers avoid
	wrong content-type detect.

[Fix] 	Bug on attachment filename, sometimes the name ends with 
	';' when receving emails from Hotmail accounts.

[Fix]	Use the configured port on ONE-FOR-ALL mode, not depending
	from protocol.

[Fix]	Use relative path on redir.php links, avoid problems on 
	https servers.


1.1.1:

 * Fixed little bug on catch-address where wrong address was added
   to addressbook.

1.1.1-rc2:

 * Fixed problem where messages disappear on refresh with zero quota.

 * Little fixes on themes.

1.1.1-rc1:
 
 * Added sort for personal folders on folders list and fixed a
   bug can cause duplicate entries in the list.
 
 * Fixed problem with missing header info when using IMAP. Also
   addresses possible "double showing" of SPAM email both Inbox
   and Spam folder.

 * Solved issue when attached images with upcase or capitalized extension
   (like .JPG or .Gif) are not displayed inline

 * Added check for exclude user address in reply-all  

 * Added ability to require a return-receipt on a new message

 * Improved signature/footer attach and multiple quotes on HTML messages

 * umask value and default directory permission bitmask now
   configurable via the config.php file. Useful for some
   environs that need a more "open" permission setup.
   NOTE: this requires people upgrading from 1.1.0 or earlier
   to modify their config.security.php file! Look at the
   config.security.php.default file for these variable settings.

 * Templates improvements: 